<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".sign_up">

    <ImageView
        android:id="@+id/zoro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo_app"
        android:scaleType="fitEnd"
        app:layout_constraintTop_toBottomOf="@id/cancel"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"/>
        <!--android:src="@drawable/zoro"-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logillo"
        app:layout_constraintStart_toStartOf="@id/guialinea1"
        app:layout_constraintEnd_toEndOf="@id/guialinea2"
        app:layout_constraintTop_toTopOf="@id/main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guialinea2"
        app:layout_constraintStart_toStartOf="@id/guialinea1"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:startIconDrawable="@drawable/email"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@color/gray"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guialinea2"
        app:layout_constraintStart_toStartOf="@id/guialinea1"
        app:layout_constraintTop_toBottomOf="@+id/input_login"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@color/gray"
            android:hint="@string/input_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guialinea2"
        app:layout_constraintStart_toStartOf="@id/guialinea1"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@color/gray"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:text="@string/sing_up"
        android:onClick="signupToMain"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guialinea1"
        app:layout_constraintEnd_toEndOf="@id/guialinea2"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_password"
        style="@style/buttonflat" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"
        app:layout_constraintStart_toStartOf="@id/guialinea1"
        app:layout_constraintEnd_toEndOf="@id/guialinea2"
        app:layout_constraintTop_toBottomOf="@id/signup"
        style="@style/buttonOutLined"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guialinea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guialinea2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>
