<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity">

    <ImageView
        android:layout_marginTop="60dp"
        android:id="@+id/perfil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="@+id/main"
        app:layout_constraintEnd_toEndOf="@+id/main"
        tools:srcCompat="@tools:sample/avatars"
        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:fontFamily="@font/alatsi"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/main"
        app:layout_constraintStart_toStartOf="@+id/guialinea1"
        app:layout_constraintEnd_toEndOf="@+id/guialinea2"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:fontFamily="@font/alatsi"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/perfil"
        app:layout_constraintStart_toStartOf="@+id/guialinea1"
        app:layout_constraintEnd_toEndOf="@+id/guialinea2"
        style="@style/buttonOutLined"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notificaciones"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alatsi"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintStart_toStartOf="@+id/guialinea1"
        app:layout_constraintEnd_toEndOf="@+id/guialinea2"
        style="@style/buttonOutLined"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_de_perfil"
        android:fontFamily="@font/alatsi"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintStart_toStartOf="@+id/guialinea1"
        app:layout_constraintEnd_toEndOf="@+id/guialinea2"
        style="@style/buttonOutLined"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alatsi"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="@+id/guialinea1"
        app:layout_constraintEnd_toEndOf="@+id/guialinea2"
        android:onClick="salir"
        style="@style/buttonOutLined"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guialinea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guialinea2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

</androidx.constraintlayout.widget.ConstraintLayout>